# UWAC

./: .gitignore  Makefile.am  README.md  bootstrap.sh  configure.ac  uwac.pc.in
src/: uwac-display.c  uwac-input.c  uwac-os.c  uwac-os.h  uwac-output.c  uwac-priv.h  uwac-tools.c  uwac-tools.h  uwac-utils.c  uwac-window.c  uwac.h
tests/: test-basic.c  test-window.c
